# UCI-Heart-Disease-Data-using-agents-with-langchain

./: .gitignore  CardioTriage_ML_Phase.pptx  build_deck.js  knowledge_base_rules.csv  package-lock.json  pyproject.toml
ai/: b1_initial_state.py  b4_astar.py  b5_recommendation.py  b7_forward_chain.py  b8_reconcile.py  b9_integration.py  b9b_orchestrator.py  knowledge_base.py  state_space.py
experiments/: benchmarks.py
ml/: a1_load_inspect.py  a2_preprocess.py  a3_eda.py  a4_logreg.py  a5_compare.py  a6a_learning_curves.py  a6b_regularization.py  a6c_threshold.py  a7_clustering.py  a8_save_model.py  evaluate.py  model_api.py  preprocessing.py  save_rf_model.py
models/: metadata.json  phenotype_model.joblib  rf_model.joblib  risk_model.joblib
webapp/: ai_service.py  server.py
webapp/static/: app.js  console.css  console.html  console.js  index.html  style.css
